[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
bevy_rapier2d = "0.22.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
nalgebra = "0.32.3"
once_cell = "1.18.0"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
